manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kade-im-service
spec:
  selector:
    app: kade-im
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: NodePort
